2005-09-09  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require gnokii 0.6.5 to compile (Closes: #315628)

2005-09-09  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c: (phonemgr_utils_init_hash_tables):
	Add support for the Nokia 6021 and Nokia 6230, with help from
	Frederic Crozat <fcrozat@mandriva.com>

============ Version 0.6

2005-09-09  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* configure.in: version 0.6

2005-09-09  Bastien Nocera  <hadess@hadess.net>

	* src/e-contact-entry.c: (book_opened_cb),
	(e_contact_entry_set_source_list), (e_contact_entry_init),
	(e_contact_entry_class_init):
	* src/e-contact-entry.h: update from contact-lookup-applet CVS
	* src/e-phone-entry.c: (sources_changed_cb),
	(setup_source_changes), (e_phone_entry_init):
	Update for changes in EContactEntry, watch the availability of
	completion entries, the entry now works even if there aren't any
	addressbooks with completion enabled (Closes: #310014)

2005-09-08  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_poll): add some
	+ and - in the phone number, to test for common phone numbers found in
	people's address books
	* src/e-phone-entry.c: (cleanup_number), (text_changed),
	(contact_selected_cb), (e_phone_entry_get_number):
	send a changed signal when first setting the phone number,
	allow '-' in phone numbers (Closes: #314545),
	Fix some memory leaks when checking for changed text in text_changed()
	* src/test-entry.c: (phone_changed_cb), (main): Fix warnings

2005-09-08  Bastien Nocera  <hadess@hadess.net>

	* autogen.sh: use autogen 1.8
	* configure.in: dist as a .tar.bz2, and check the NEWS file before
	dist'ing
	* libgsm/phonemgr-listener.c: (phonemgr_listener_emit_status),
	(phonemgr_listener_new), (phonemgr_listener_connect),
	(phonemgr_listener_disconnect), (phonemgr_listener_queue_message),
	(phonemgr_listener_poll), (phonemgr_listener_connected),